@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.33 2008/12/13 16:56:21 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.34 2008/12/17 23:29:36 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -36,6 +36,7 @@ Version change log: $Id: CHANGES.txt,v 1.33 2008/12/13 16:56:21 snikkel Exp $
             fix: beos: Fix bug in network code preventing server communication
             new: cellbe: OGR-NG SPU ASM core
             imp: x86: Identify AMD "Unknown" processors (#4106)
+            fix: x86: Pentium M naming (#4075)
 
 2.9101-507  new: all: Added OGR-NG contest 
             chg: x86: RC5-72 core selection (#4072)
